<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>


    <groupId>org.dromara.daxpay</groupId>
    <artifactId>daxpay-single-channel</artifactId>
    <version>3.0.0.beta1</version>
    <packaging>pom</packaging>
    <description>单商户支付通道功能实现</description>

    <modules>
        <module>daxpay-single-alipay</module>
        <module>daxpay-single-wechat</module>
        <module>daxpay-single-union</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 三方库 -->
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
        <autopoi.version>1.4.8</autopoi.version>
        <easypoi.version>4.5.0</easypoi.version>

        <bootx-platform.version>3.0.0.beta1</bootx-platform.version>
        <daxpay.version>3.0.0.beta1</daxpay.version>
    </properties>

    <dependencies>
        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- lombok 配合 mapstruct -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-mapstruct-binding</artifactId>
            <scope>provided</scope>
            <version>${lombok-mapstruct.version}</version>
        </dependency>

        <!-- 类型转换处理器 -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <scope>provided</scope>
            <version>${mapstruct.version}</version>
        </dependency>

        <!-- 支付服务实现类 -->
        <dependency>
            <groupId>org.dromara.daxpay</groupId>
            <artifactId>daxpay-single-service</artifactId>
            <version>3.0.0.beta1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- 打包Excel等资源文件损坏问题 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>xls</nonFilteredFileExtension>
                        <nonFilteredFileExtension>docx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>doc</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <!-- 指定打包资源路径 -->
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <!-- java类路径中会被打包的软件 -->
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.sql</include>
                    <include>**/*.flt</include>
                    <include>**/*.xlsx</include>
                    <include>**/*.xls</include>
                    <include>**/*.docx</include>
                    <include>**/*.doc</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>
